<resources>
    <string name="app_name">Good Morning</string>
    <string-array name="gallery_tabs">
        <item>Photo Gallery</item>
        <item>Video Gallery</item>
    </string-array>
    <string-array name="news_tabs">
        <item>Advertisment</item>
        <item>Advertorial Advertisment</item>
        <item>Press Release</item>
        <item>Radio</item>
        <item>Others</item>
    </string-array>
    <string name="adv">adv</string>
    <string name="aa">aa</string>
    <string name="pr">pr</string>
    <string name="vid">vid</string>
    <string name="rad">rad</string>
    <string name="others">others</string>
    <string-array name="welcome_tabs">
        <item>Our Products</item>
        <item>Latest Promotion</item>
    </string-array>
    <string-array name="countries">
        <item>Country</item>
        <item>Malaysia</item>
        <item>Singapore</item>
    </string-array>
    <string-array name="weeks">
        <item>Su</item>
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>
    <string-array name="months">
        <item>JANUARY</item>
        <item>FEBRUARY</item>
        <item>MARCH</item>
        <item>APRIL</item>
        <item>MAY</item>
        <item>JUNE</item>
        <item>JULY</item>
        <item>AUGUST</item>
        <item>SEPTEMEBER</item>
        <item>OCTOBER</item>
        <item>NOVEMBER</item>
        <item>DECEMEBER</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_empty">Empty</string>
    <string name="action_edit">Edit</string>
    <string name="new_task">new tasks</string>
    <string name="you_have">You have</string>
    <string name="view_all_task">View All Task</string>
    <string name="folder_name">goodmorning</string>
    <string name="temp">Temp</string>
    <string name="log">Log</string>
    <string name="base_url">http://203.223.143.30:8070/gdmorningapi/api/</string>
    <string name="menu_provider" translatable="false">com.applab.goodmorning.menu.provider</string>
    <string name="token_provider">com.applab.goodmorning.login.provider</string>
    <string name="account_provider">com.applab.goodmorning.account.provider</string>
    <string name="product_provider">com.applab.goodmorning.product.provider</string>
    <string name="country_provider">com.applab.goodmorning.country.provider</string>
    <string name="state_provider">com.applab.goodmorning.state.provider</string>
    <string name="cart">Cart</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="confirmation">Confirmation</string>
    <string name="search">Search</string>
    <string name="dummy">Dummy Text</string>
    <string name="welcome">Welcome</string>
    <string name="no_items">No items</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="pdf">PDF</string>
    <string name="picture">Picture</string>
    <string name="promotion_messages">Do you want to open image or PDF?</string>
    <string name="title_selection">Choice</string>
    <string name="download_message">Do you want to download this file?</string>
    <string name="download">Download</string>
    <string name="audio_file">Audio File</string>
    <string name="recalculate">Recalculate</string>
    <string name="english">English</string>
    <string name="malay">Malay</string>
    <string name="chinese">Chinese</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="language">English</string>
    <string name="country_malaysia">Malaysia</string>
    <string name="country_singapore">Singapore</string>
    <string name="address_morning">No.56,Taman Perindustrian Tiong Nam,
    Jln 15/22 Seksyen 15,40200 Shah Alam,Selangor.</string>
    <string name="phone_number">1-300-22-1818</string>
    <string name="website">www.goodmorning.com.my</string>
    <string name="email_morning">inquiry@goodmorning.com.my</string>
    <string name="open_time">Mon to Fri, 9am-6pm</string>
    <string name="name">Name</string>
    <string name="email">Username or Email</string>
    <string name="email_password">Email</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="google_map">GOOGLE MAP</string>
    <string name="waze">WAZE</string>
    <string name="google_map_url">http://maps.google.com/?q=</string>
    <string name="waze_url">waze://?ll=</string>
    <string name="waze_failed_url">market://details?id=com.waze</string>
    <string-array name="contact_us_tabs">
        <item>Store Locators</item>
        <item>Loyalty Outlets</item>
    </string-array>
    <string-array name="enquiry_tabs">
        <item>General</item>
        <item>Retail &#38; Distributors</item>
        <item>OEM</item>
    </string-array>
    <string name="online_enquiry">Online Enquiry</string>
    <string name="we_love">We love to hear your queries</string>
    <string name="messages">Message</string>
    <string name="sends">SEND</string>
    <string name="retail_distributor">Retail &#38; Distributor</string>
    <string name="names">Name*</string>
    <string name="name_of_outlets">Name of Outlets*</string>
    <string name="address_of_outlets">Address of Outlets*</string>
    <string name="postcode">Postcode</string>
    <string name="emails">Email*</string>
    <string name="emailses">Email</string>
    <string name="phones">Phone*</string>
    <string name="oem_enquiry">OEM Enquiry</string>
    <string name="please_fill">Please fill in the form below to send us for your OEM enquires Field marked* are mandatory</string>
    <string name="first_names">First Name*</string>
    <string name="last_names">Last Name*</string>
    <string name="company_name">Company Name*</string>
    <string name="addresses">Address*</string>
    <string name="subject">Subject*</string>
    <string-array name="purpose">
        <item>Product</item>
        <item>Enquiry</item>
        <item>Testimony</item>
        <item>Interested to be our partner</item>
        <item>Feedback</item>
        <item>Others</item>
    </string-array>
    <string name="if_you_interested">If you interested in stocking or distributing our products, then please reply us using the following forms and we will get back to you as soon as possible. Please fill in the form below to send us for your retails or distributors enquires Field marked* are mandatory</string>
    <string name="name_error">Name is required</string>
    <string name="name_outlet_error">Name of Outlets is required</string>
    <string name="address_outlet_error">Address of Outlets is required</string>
    <string name="email_error">Email is required</string>
    <string name="phone_error">Phone is required</string>
    <string name="message_error">Message is required</string>
    <string name="purpose_error">Please select purpose</string>
    <string name="first_name_error">First name is required</string>
    <string name="last_name_error">Last name is required</string>
    <string name="company_name_error">Company name is required</string>
    <string name="address_error">Address is required</string>
    <string name="subject_error">Subject is required</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="success_send">Success send</string>
    <string name="city_error">City is required</string>
    <string name="postcode_error">Postcode is required</string>
    <string name="state_error">State is required</string>
    <string name="need_login">You need to login to continue</string>
    <string name="username_email_error">Username or email is required</string>
    <string name="date_large">DATE:</string>
    <string name="order_code">ORDER CODE:</string>
    <string name="status">STATUS:</string>
    <string name="gst_six_percent">GST @ 6%</string>
    <string name="promotional_code">Promotional Code</string>
    <string name="change_password">Change Password</string>
    <string name="account_username">USERNAME</string>
    <string name="account_email">EMAIL</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="salutation">Salutation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="stateItem">State</string>
    <string name="post_code">Post Code</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>
    <string name="read_more">Read More</string>
    <string name="excl_gst">(excl 6% GST)</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_cart_large">ADD TO CART</string>
    <string name="product_overview">PRODUCT OVERVIEW</string>
    <string name="main_ingredients">MAIN INGREDIENTS</string>
    <string name="recommend_for">RECOMMEND FOR</string>
    <string name="benefits">BENEFITS</string>
    <string name="directions_for_use">DIRECTIONS FOR USE</string>
    <string name="certificates">CERTIFICATES</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="description">Decription:</string>
    <string name="created_by">Created by:</string>
    <string name="remarks">Remarks:</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="youtube_api_key">AIzaSyBIb5mmqvQtEypBGz4E9Ns7XI0pIM27yC0</string>
    <string name="youtube_base_url">https://img.youtube.com/vi/</string>
    <string name="youtube_thumbnail">/0.jpg</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_photos">Photos</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_check_out">Check Out</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="title_activity_order_history">Order History</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_select_your_country">Select Country</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="titlte_activity_select_language">Select Language</string>
    <string name="title_shipping_address">SHIPPING ADDRESS</string>
    <string name="title_activity_photo">Photo</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_edit_details">Edit Details</string>
    <string name="thanks">Thanks for your interest in buying our products</string>
    <string name="process">Your order is being process, stay tuned!</string>
    <string name="home_page">Back to home page</string>
    <string name="text_forgot_pwd">In order to receive your access code by email, please enter the address you provided during the registration process</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="shipment_info">SHIPMENT INFO</string>
    <string name="use_default">Use default information</string>
</resources>