<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="32dp">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/complete_deal_brown_transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:text="@string/thanks"
            android:textColor="@color/color_accent"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/process"
            android:textColor="@color/color_accent"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:text="@string/home_page" />

    </LinearLayout>

</LinearLayout>