<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipment_info"
            android:textColor="@color/color_primary_text"
            android:textSize="@dimen/normal_text_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/btnDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/color_secondary">

                <ImageView
                    android:id="@+id/imgCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/checkbox" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/use_default"
                android:textColor="@color/color_secondary_text"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_highlight">

            <EditText
                android:id="@+id/ediFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/first_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <EditText
                android:id="@+id/ediLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/color_highlight">

            <EditText
                android:id="@+id/ediPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <EditText
                android:id="@+id/ediEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/email_password"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_highlight">

            <EditText
                android:id="@+id/ediAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_highlight">

            <EditText
                android:id="@+id/ediCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/city"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <EditText
                android:id="@+id/ediPostCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/postcode"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/color_input_text"
                android:textColorHint="@color/color_secondary_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/color_highlight"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_state"
                style="@style/Spinner.Main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:prompt="@string/country"
                android:textColor="@color/color_input_text"
                android:textSize="@dimen/smaller_text_size" />


            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Spinner
                android:id="@+id/spinner"
                style="@style/Spinner.Main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:prompt="@string/country"
                android:textColor="@color/color_input_text"
                android:textSize="@dimen/smaller_text_size" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>